Modified beamer theme

--- a/comp110/module_guide.tex
+++ b/comp110/module_guide.tex
@@ -10,11 +10,11 @@
 
 \begin{document}
 
-\title{Module code here}
-\subtitle{Module name here}
-\moduleCode{Module code here}
-\moduleLeader{Module leader here}
-\credits{Number of credits here}
+\title{COMP110}
+\subtitle{Principles of Computing}
+\moduleCode{COMP110}
+\moduleLeader{Dr Edward Powley}
+\credits{20}
 \isCompulsory{Compulsory}
 
 \frame{\titlepage} 
