Added Falmouth logo

--- a/beamerthemeFalmouthGamesAcademy.sty
+++ b/beamerthemeFalmouthGamesAcademy.sty
@@ -93,8 +93,11 @@
 				\raggedleft\usebeamerfont{subtitle}\@isCompulsory\ for BSc Computing for Games
 			}
         };
-        \node[anchor=center] at (current page.center) {
-        	\includegraphics[height=0.4\paperheight]{GamesLogoAt}
+        \node[anchor=south west, xshift=0.025\paperwidth, yshift=40\PptPoint] at (current page.south west) {
+        	\begin{tabular}{c}
+	        	\includegraphics[width=0.15\paperwidth]{GamesLogoAt} \\
+				\includegraphics[width=0.15\paperwidth]{FalmouthLogo}
+			\end{tabular}
         };
         %\node[anchor=south east, xshift=-0.025\paperwidth, yshift=40\PptPoint] at (current page.south east) {
 		%	\parbox[t]{0.95\paperwidth}{\raggedleft\usebeamerfont{title}\textbf{\insertsubtitle}}
