--- a/comp120/module_guide.tex
+++ b/comp120/module_guide.tex
@@ -10,10 +10,10 @@
 
 \begin{document}
 
-\title{COMP110}
-\subtitle{Principles of Computing}
-\moduleCode{COMP110}
-\moduleLeader{Dr Edward Powley}
+\title{COMP120}
+\subtitle{Creative Computing: Tinkering }
+\moduleCode{COMP120}
+\moduleLeader{Brian McDonald}
 \credits{20}
 \isCompulsory{Compulsory}
 
@@ -21,17 +21,16 @@
 
 \begin{frame}
 	\frametitle{Introduction}
-
-	Module description.	
+This module is designed to help you learn different ways of engaging with code using practical and explorative methods. You will learn the value of taking a creative approach to computing and become acquainted with some of the principles behind Creative Computing. You will take existing code and modify it in creative ways in order to build your understanding of computing for games and to create repurposed use of code and technology. The module will introduce you to the core principal of rapid iteration, where tinkering with existing code can provide the basics on which something new can be built. You will therefore gain experience of how to produce innovation and efficiency through the principles of repurposing. You work with open source material and gain a practical understanding of the value and use of open source in a creative computing and games context. 
 	
 \end{frame}
 
 \begin{frame}
 	\frametitle{Aims}
 	\begin{itemize}
-		\item Outcome 1
-		\item Outcome 2
-		\item Outcome 3
+		\item Understand computing for games
+		\item Understand how to re-purpose and augment code to build something new
+		\item Apply programming skills creatively
 	\end{itemize}
 \end{frame}
 
