Setup .tex file for comp110.

--- a/comp110/module_guide.tex
+++ b/comp110/module_guide.tex
@@ -12,8 +12,7 @@
 
 \title{COMP110}
 \subtitle{Principles of Computing}
-\moduleCode{COMP110}
-\moduleLeader{Dr Edward Powley}
+\moduleLeader{Dr Ed Powley}
 \credits{20}
 \isCompulsory{Compulsory}
 
@@ -21,17 +20,19 @@
 
 \begin{frame}
 	\frametitle{Introduction}
-
-	Module description.	
+	This module is designed to introduce you to the basic principles of computing in the context of digital games. It is designed to complement the other modules through providing a broad foundation on the theories, methods, and techniques which will help you to be able to construct computer programs and be able to use relevant scholarly sources.
 	
 \end{frame}
 
 \begin{frame}
 	\frametitle{Aims}
+	
+	This module aims to help you:
+	
 	\begin{itemize}
-		\item Outcome 1
-		\item Outcome 2
-		\item Outcome 3
+		\item Understand the basic principles, terminology, roles, and software development concept that computing professionals apply within a game development context 
+		\item Understand how to apply computing theory to practical programming activities
+		\item Understand how to conduct basic software development tasks
 	\end{itemize}
 \end{frame}
 
@@ -50,9 +51,19 @@
 \begin{frame}
 	\frametitle{Additional Resources}
 	
-	Link to support material
-	Link to asssignment briefs
-	Link to Talis Aspire reading list
+	Session Plans \& Materials: \\
+	\url{http://learningspace.falmouth.ac.uk/}
+	
+	\vspace{1.5em}	
+	
+	Assignment Briefs: \\
+	\url{https://github.com/Falmouth-Games-Academy/bsc-assignment-briefs}
+
+	\vspace{1.5em}	
+	
+	Reading List: \\
+	\url{http://resourcelists.falmouth.ac.uk/index.html}
+
 \end{frame}
 
 \end{document}
