Added in generic resources to comp120

--- a/comp120/module_guide.tex
+++ b/comp120/module_guide.tex
@@ -47,11 +47,21 @@ This module is designed to help you learn different ways of engaging with code u
 \end{frame}
 
 \begin{frame}
-	\frametitle{Additional Resources}
-	
-	Link to support material
-	Link to asssignment briefs
-	Link to Talis Aspire reading list
+\frametitle{Additional Resources}
+
+Session Plans \& Materials: \\
+\url{http://learningspace.falmouth.ac.uk/}
+
+\vspace{1.5em}	
+
+Assignment Briefs: \\
+\url{https://github.com/Falmouth-Games-Academy/bsc-assignment-briefs}
+
+\vspace{1.5em}	
+
+Reading List: \\
+\url{http://resourcelists.falmouth.ac.uk/index.html}
+
 \end{frame}
 
 \end{document}
