Added template for learning outcomes

--- a/comp120/module_guide.tex
+++ b/comp120/module_guide.tex
@@ -41,9 +41,39 @@ This module is designed to help you learn different ways of engaging with code u
 \end{frame}
 
 \begin{frame}
-	\frametitle{Learning Outcomes}
-	
-	Grid goes here.
+\frametitle{Learning Outcomes}
+
+\centering
+\tiny
+\begin{tabular} { | p{.05\textwidth} | p{.4\textwidth} | p{.4\textwidth} |}
+	%HEAD
+	LO &
+	\textbf{Learning Outcomes} Upon completion of this Module you should be able to: &  
+	\textbf{Assessment Criteria} To achieve the learning outcome you must demonstrate the ability to: \\
+	\hline
+	% OUTCOME 1
+	1 &
+	Show a basic understanding of creative computing solutions using professional techniques  &  
+	Demonstrate a basic understanding of computing fundamentals. Apply basic knowledge and understanding of the techniques used in software development. Understand the creative value of maker-style and iterative approaches for the generation of innovation. \\
+	% OUTCOME 2
+	2 &
+	Show a basic understanding of how to communicate effectively with stakeholders in writing, verbally and through adherence to coding standards &  
+	Show a basic understanding of how to communicate effectively with stakeholders in writing, verbally, and through adherence to coding standards. Annotate software to communicate with others effectively. \\
+	% OUTCOME 3
+	3 &
+	Show a basic development of the ability to reflect critically on and evaluate working methods and solutions  & 
+	Analyse critically the strengths and weaknesses of code and develop an ability to respond to the critical judgements of others. \\
+	% OUTCOME 4
+	4 &
+	Show a basic understanding of the ability to conduct research, present knowledge in an academic format and apply that research to practice  & 
+	Research and explain the use of methodologies used in computing, apply knowledge to practice, and present that knowledge where appropriate in an academic format. \\
+	% OUTCOME 6
+	6 &
+	Show a basic understanding of methods used to help set goals, manage workloads to meet deadlines and to work collaboratively  & 
+	Set goals and manage workloads to meet deadlines using set methodologies and present ideas in a variety of situations with appropriate support. 
+\end{tabular}
+
+
 \end{frame}
 
 \begin{frame}
