Updated tables for comp110.

--- a/comp110/module_guide.tex
+++ b/comp110/module_guide.tex
@@ -12,7 +12,8 @@
 
 \title{COMP110}
 \subtitle{Principles of Computing}
-\moduleLeader{Dr Ed Powley}
+\def\moduleLeader{Dr Edward Powley}
+\def\academicStaff{Dr Michael Scott}
 \credits{20}
 \isCompulsory{Compulsory}
 
@@ -20,7 +21,7 @@
 
 \begin{frame}
 	\frametitle{Introduction}
-	This module is designed to introduce you to the basic principles of computing in the context of digital games. It is designed to complement the other modules through providing a broad foundation on the theories, methods, and techniques which will help you to be able to construct computer programs and be able to use relevant scholarly sources.
+	This module is designed to introduce you to the basic principles of computing in the context of digital games. It is designed to complement the other modules, providing a broad foundation on the theories, methods, models, and techniques in computing which will help you to construct computer programs and be able to make use of relevant scholarly sources.
 	
 \end{frame}
 
@@ -37,22 +38,17 @@
 \end{frame}
 
 \begin{frame}
-	\frametitle{Overview}
-	
-	Grid goes here.
-\end{frame}
-
-\begin{frame}
 	\frametitle{Learning Outcomes}
-
+	
 	\centering
 		\tiny
-		\begin{tabular} { | p{.05\textwidth} | p{.4\textwidth} | p{.4\textwidth} |}
+		\def\arraystretch{1.5}
+		\begin{tabular} { | p{.02\textwidth} | p{.45\textwidth} p{.45\textwidth} |}
 			%HEAD
- 			LO &
-			\textbf{Learning Outcomes} Upon completion of this Module you should be able to: &  
-			\textbf{Assessment Criteria} To achieve the learning outcome you must demonstrate the ability to: \\
-			\hline
+ 			\textbf{LO} &
+			\textbf{Learning Outcomes} &  
+			\textbf{Assessment Criteria} \\
+
 			% OUTCOME 1
  			1 &
 			Show a basic understanding of creative computing solutions using professional techniques  &  
@@ -74,8 +70,77 @@
 			Show a basic understanding of methods used to help set goals, manage workloads to meet deadlines and to work collaboratively  & 
 			Set goals and manage workloads to meet deadlines using set methodologies and present ideas in a variety of situations with appropriate support. 
 		\end{tabular}
-
 	
+\end{frame}
+
+\begin{frame}
+	\frametitle{Overview}
+	
+	\centering
+		\tiny
+		\def\arraystretch{1.5}
+		\begin{tabular} { | p{.20\textwidth} | p{.4\textwidth} p{.25\textwidth} |}
+		
+			%MODULE LEADER
+			\textbf{Module Leader} &  
+			\moduleLeader &
+			\\
+
+			%TEACHING TEAM
+			\textbf{Academic Staff} &  
+			\academicStaff &
+			\\
+			
+			&&\\
+			
+			%ASSIGNMENTS
+			\textbf{Assignments} &  
+			Worksheet Tasks &
+			80\% \\
+			
+			%ASSIGNMENTS
+			&  
+			Research Journal &
+			20\% \\
+			
+			&&\\
+						
+			%Hours
+			\textbf{Indicative Hours} &  
+			Sessions &
+			36-hours \\
+			
+			%Hours
+			&
+			Directed Reading &
+			18-hours \\
+			
+			%Hours
+			&  
+			Worksheet Tasks &
+			56-hours \\
+			
+			%Hours
+			&
+			Research Journals &
+			14-hours \\
+									
+			%Hours
+			&
+			Self-Directed Computing Study &
+			36-hours \\
+			
+			%Hours
+			&
+			Self-Directed Portfolio Development &
+			40-hours \\
+			
+		\end{tabular}
+		
+		\vspace{2em}
+		\raggedright
+		Each study block represents 600-hours of study. This means that 40 hours of study per week (including contact time) is expected, alongside a further 120-hours of studio practice across the assessment period.
+
 \end{frame}
 
 \begin{frame}
