--- a/comp110/slides/build.tex
+++ b/comp110/slides/build.tex
@@ -1,4 +1,4 @@
-\documentclass[handout, xcolor={dvipsnames}]{beamer}\usepackage{etoolbox}\newtoggle{printable}\toggletrue{printable}
+\documentclass[handout, xcolor={dvipsnames}]{beamer}\usepackage{etoolbox}\newtoggle{printable}\toggletrue{printable}\newtoggle{isBeamer}\toggletrue{isBeamer}
 \usepackage{../../beamerthemeFalmouthGamesAcademy}
 \graphicspath{ {../../} }
 
