Worked around x-compatiability bug with \@variables and the memoir class.

--- a/beamerthemeFalmouthGamesAcademy.sty
+++ b/beamerthemeFalmouthGamesAcademy.sty
@@ -21,19 +21,19 @@
 %\makeatother
 
 \newcommand{\@moduleCode}{COMPxxx}
-\newcommand{\moduleCode}[1]{\renewcommand{\@moduleCode}{#1}}
+\newcommand{\theModuleCode}[1]{\renewcommand{\@moduleCode}{#1}}
 
 \newcommand{\@moduleName}{New Computing Module}
-\newcommand{\moduleName}[1]{\renewcommand{\@moduleName}{#1}}
+\newcommand{\theModuleName}[1]{\renewcommand{\@moduleName}{#1}}
 
 \newcommand{\@moduleLeader}{Module leader here}
-\newcommand{\moduleLeader}[1]{\renewcommand{\@moduleLeader}{#1}}
+\newcommand{\theModuleLeader}[1]{\renewcommand{\@moduleLeader}{#1}}
 
 \newcommand{\@credits}{20}
-\newcommand{\credits}[1]{\renewcommand{\@credits}{#1}}
+\newcommand{\theCredits}[1]{\renewcommand{\@credits}{#1}}
 
 \newcommand{\@isCompulsory}{Compulsory}
-\newcommand{\isCompulsory}[1]{\renewcommand{\@isCompulsory}{#1}}
+\newcommand{\isMandatory}[1]{\renewcommand{\@isCompulsory}{#1}}
 
 % Year should be consistent and in one place
 \def\academicYear{2017-18}
