--- a/build.tex
+++ b/build.tex
@@ -8,13 +8,14 @@
 \includegraphics[width=\textwidth]{GamesLogoAt}
 
 \input{comp110/data.tex}
-
 \input{handbook_template.tex}
 
 \newpage
+\input{comp120/data.tex}
 \input{handbook_template.tex}
 
 \newpage
+\input{comp150/data.tex}
 \input{handbook_template.tex}
 
 \end{document}
