--- a/comp150/data.tex
+++ b/comp150/data.tex
@@ -1,9 +1,9 @@
-\moduleCode{COMP150}
-\moduleName{Game Development Practice}
-\credits{20}
-\isCompulsory{Compulsory}
+\def\moduleCode{COMP150}
+\def\moduleName{Game Development Practice}
+\def\credits{20}
+\def\isCompulsory{Compulsory}
 
-\moduleLeader{Dr Michael Scott}
+\def\moduleLeader{Dr Michael Scott}
 \def\academicStaff{Dr Edward Powley (Moderator), Brian McDonald (Moderator)}
 
 \def\introduction{This module is designed to introduce you to the foundational principles and processes of professional game development. You will gain an understanding of the way that different components come together to make playable games and how those components are organised through the development pipeline. You will also gain a 'first principles' understanding of how games are designed with a target market in mind, how a strong underlying concept is developed, and how different aspects of creative computing contribute to the process.}
