--- a/comp110/data.tex
+++ b/comp110/data.tex
@@ -1,9 +1,9 @@
-\moduleCode{COMP110}
-\moduleName{Principles of Computing}
-\credits{20}
-\isCompulsory{Compulsory}
+\def\moduleCode{COMP110}
+\def\moduleName{Principles of Computing}
+\def\credits{20}
+\def\isCompulsory{Compulsory}
 
-\moduleLeader{Dr Edward Powley}
+\def\moduleLeader{Dr Edward Powley}
 \def\academicStaff{Dr Michael Scott (Moderator)}
 
 \def\introduction{This module is designed to introduce you to the basic principles of computing in the context of digital games. It is designed to complement the other modules, providing a broad foundation on the theories, methods, models, and techniques in computing which will help you to construct computer programs and be able to make use of relevant scholarly sources.}
