--- a/comp120/data.tex
+++ b/comp120/data.tex
@@ -1,9 +1,9 @@
-\moduleCode{COMP120}
-\moduleName{Creative Computing: Tinkering}
-\credits{20}
-\isCompulsory{Compulsory}
+\def\moduleCode{COMP120}
+\def\moduleName{Creative Computing: Tinkering}
+\def\credits{20}
+\def\isCompulsory{Compulsory}
 
-\moduleLeader{Brian McDonald}
+\def\moduleLeader{Brian McDonald}
 \def\academicStaff{Dr Michael Scott (Moderator)}
 
 \def\introduction{This module is designed to help you learn different ways of engaging with code using practical and explorative methods. You will learn the value of taking a creative approach to computing, taking existing code and modifying it in creative ways. The module will introduce you to the core principal of rapid iteration, where tinkering with existing code can provide the basics on which something new can be built.}
