--- a/comp130/data.tex
+++ b/comp130/data.tex
@@ -1,9 +1,9 @@
-\moduleCode{COMP130}
-\moduleName{Game Architecture \& Engineering}
-\credits{40}
-\isCompulsory{Compulsory}
+\def\moduleCode{COMP130}
+\def\moduleName{Game Architecture \& Engineering}
+\def\credits{40}
+\def\isCompulsory{Compulsory}
 
-\moduleLeader{Dr Michael Scott}
+\def\moduleLeader{Dr Michael Scott}
 \def\academicStaff{Dr Edward Powley (Moderator), Brian McDonald (Moderator)}
 
 \def\introduction{This module helps you extend your practical experience and knowledge of game development practices. You will engage in depth with the principles of professional software engineering in the context of a collaborative multi-disciplinary project. All the while, researching the importance of software quality, in terms of its maintainability and sophistication, and applying your findings to shape, measure, and improve the computing solutions that you integrate into your game.}
