--- a/comp140/data.tex
+++ b/comp140/data.tex
@@ -4,7 +4,7 @@
 \def\isCompulsory{Compulsory}
 
 \def\moduleLeader{Brian McDonald}
-\def\academicStaff{Alcywn Parker (Physical Computing Specialist), Martin Cooke (Moderator)}
+\def\academicStaff{Alcywn Parker, Martin Cooke (Moderator)}
 
 \def\introduction{This module builds upon Creative Computing: Tinkering, allowing you to further develop confidence with object-orientated programming and the creative approach to computing in the games development context. You will take code in multiple contexts, and learn ways and methods for bringing these together in synthesis in order to build more interesting and complex systems. Part of this will involve ‘hacking’ together different sets of open-source code, hardware, and web services together; all the while considering issues such as intellectual property law and licensing.}
 
